--- a/Daylight/zh-Hans.lproj/Localizable.strings
+++ b/Daylight/zh-Hans.lproj/Localizable.strings
@@ -1,4 +1,8 @@
 /* 简体中文本地化 */
+"app.launch_failed" = "启动失败";
+"app.loading" = "加载中…";
+"app.retry" = "重试";
+
 "home.title" = "别熬夜了，早点睡";
 "home.subtitle" = "写下白天的你想对今晚说的话";
 "home.title.day" = "白昼之灯已亮起";
